hkjl; New files added - [AllTypesDBAutomation,FileService] Files modified - [Main,securityService,WEB-INF,profiles,webapp,.wmproject.properties,pom.xml]

--- a/.wmproject.properties
+++ b/.wmproject.properties
@@ -5,11 +5,11 @@
 <entry key="copyrightMsg">Copyright (c) 2016-2017 wavemaker.com All Rights Reserved.
  This software is the confidential and proprietary information of wavemaker.com You shall not disclose such Confidential Information and shall use it only in accordance
  with the terms of the source code license agreement you entered into with wavemaker.com</entry>
-<entry key="dateFormat"/>
+<entry key="dateFormat">yyyy-MM-dd</entry>
 <entry key="homePage">Main</entry>
-<entry key="studioProjectUpgradeVersion">90.02</entry>
+<entry key="studioProjectUpgradeVersion">90.08</entry>
 <entry key="supportedLanguages">en</entry>
-<entry key="timeFormat"/>
+<entry key="timeFormat">HH:mm:ss</entry>
 <entry key="packagePrefix">com.auto_nlphnqpjmk</entry>
 <entry key="platformType">WEB</entry>
 <entry key="version">1.0</entry>
