--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,20 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/AllTypesDBAutomation/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/FileService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/securityService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -96,6 +110,8 @@
                         </goals>
                         <configuration>
                             <sources>
+                                <source>services/AllTypesDBAutomation/src</source>
+                                <source>services/FileService/src</source>
                                 <source>services/securityService/src</source>
                             </sources>
                         </configuration>
@@ -264,6 +280,11 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -294,6 +315,8 @@
         <profile.props.file>development.properties</profile.props.file>
         <spring.version>4.3.9.RELEASE</spring.version>
         <spring.security.version>4.1.2.RELEASE</spring.security.version>
-        <wavemaker.studio.version>9.0.2.3914</wavemaker.studio.version>
+        <wavemaker.studio.version>9.1.0.3966</wavemaker.studio.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.lib.directory>${basedir}/lib</project.lib.directory>
     </properties>
 </project>
