--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -3,7 +3,18 @@ app.proxy.host=
 app.proxy.password=
 app.proxy.port=
 app.proxy.username=
+db.AllTypesDBAutomation.dataSourceType=WM_MANAGED_DATASOURCE
+db.AllTypesDBAutomation.hbm2ddl=none
+db.AllTypesDBAutomation.jndiName=
+db.AllTypesDBAutomation.maxPageSize=100
+db.AllTypesDBAutomation.maxPoolSize=4
+db.AllTypesDBAutomation.minPoolSize=2
+db.AllTypesDBAutomation.password=7b6a43524a2621157e686d791a50777e47367b6a3120
+db.AllTypesDBAutomation.transactionTimeout=30
+db.AllTypesDBAutomation.url=jdbc:mysql://ec2-54-87-2-36.compute-1.amazonaws.com:3306/AllTypesDBAutomation?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+db.AllTypesDBAutomation.username=root
 security.enabled=false
+security.general.cors.allowCredentials=false
 security.general.cors.enabled=false
 security.general.cors.maxAge=1600
 security.general.ssl.enabled=false
